# InteligentnaAnalizaDanych

./: CMakeLists.txt  CMakeLists2.txt
Perceptron/program/: CMakeLists2.txt
Perceptron/program/include/: Perceptron.h
Perceptron/program/src/: Perceptron.cpp  main.cpp
Zad1/: CMakeLists.txt
Zad1/program/include/: Neuron.h  NeuronBezBiasu.h  SiecBezBiasu.h  SiecNeuronowa.h  Trener.h  Warstwa.h  WarstwaBezBiasu.h
Zad1/program/src/: Neuron.cpp  NeuronBezBiasu.cpp  SiecBezBiasu.cpp  SiecNeuronowa.cpp  Trener.cpp  Warstwa.cpp  WarstwaBezBiasu.cpp  main.cpp
Zad2/: CMakeLists.txt
Zad2/program/include/: Neuron.h  NieWiem.h  Plaszczyzna.h  Punkt.h  Rysowanie.h
Zad2/program/src/: Neuron.cpp  NieWiem.cpp  Plaszczyzna.cpp  Punkt.cpp  Rysowanie.cpp  main.cpp
Zad3/: CMakeLists.txt
Zad3/include/: NeuronLin.h  NeuronRad.h  WarstwaLin.h  WarstwaRad.h  klasaSortNeur.h
Zad3/src/: NeuronLin.cpp  NeuronRad.cpp  WarstwaLin.cpp  WarstwaRad.cpp  klasaSortNeur.cpp  main.cpp
biblioteka/: CMakeLists.txt
biblioteka/src/: Punkt.cpp
program/: CMakeLists.txt
program/include/: Chodakowska.h  Perceptron.h  Punkt.h  Rysowanie.h
program/src/: Chodakowska.cpp  Perceptron.cpp  Rysowanie.cpp  main.cpp
